// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputField component applies custom classes correctly 1`] = `
<DocumentFragment>
  <input
    class="border pl-5 rounded-lg transition focus:border-primary focus:outline-none custom-class"
  />
</DocumentFragment>
`;

exports[`InputField component disables input when disabled prop is true 1`] = `
<DocumentFragment>
  <input
    class="border pl-5 rounded-lg transition focus:border-primary focus:outline-none"
    disabled=""
  />
</DocumentFragment>
`;

exports[`InputField component renders correctly 1`] = `
<DocumentFragment>
  <input
    class="border pl-5 rounded-lg transition focus:border-primary focus:outline-none"
  />
</DocumentFragment>
`;
